--- a/works.html
+++ b/works.html
@@ -167,7 +167,7 @@
                 <h1 class="page__title">Мои работы</h1>
                 
                 <article class="work">
-                    <a href="https:https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank" class="work__preview">
+                    <a href="https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank" class="work__preview">
                         <picture>
                             <!--<source srcset="https:placehold.it/575x150" media="(max-width: 575px)">-->
                             <img src="assets/images/works/work2.jpg" alt="">
@@ -175,7 +175,7 @@
                     </a>
                     <div class="work__content">
                         <h2 class="work__title">
-                            <a href=https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank">ActiveBox</a>
+                            <a href="https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank">ActiveBox</a>
                         </h2>
                 
                         <div class="work__description">
