--- a/text.html
+++ b/text.html
@@ -110,7 +110,7 @@
                     </ul>
         
                     <div class="profile__text">
-                        Front-end разработчик. Практик верстки сайтов. Созданием сайтов занимаюсь с 2019 года. Работал в нескольких IT компаниях и наработал более 1&#8239;000 часов в создании сайтов различной сложности.
+                        Front-end разработчик. Практик верстки сайтов. Созданием сайтов занимаюсь с 2020 года.
                     </div>
                 </div><!--/.profile-->
         
