--- a/src/works.html
+++ b/src/works.html
@@ -6,7 +6,7 @@ title: Works
 <h1 class="page__title">Мои работы</h1>
 
 <article class="work">
-    <a href="https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank" class="work__preview">
+    <a href="https://artyomprisyazhnyy.github.io/ActiveBox/index.html" target="_blank" class="work__preview">
         <picture>
             <source srcset="assets/images/works/ActiveBoxSmall.jpg" media="(max-width: 575px)">
             <img src="assets/images/works/activebox2.jpg" alt="">
@@ -14,7 +14,7 @@ title: Works
     </a>
     <div class="work__content">
         <h2 class="work__title">
-            <a href="https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank">ActiveBox</a>
+            <a href="https://artyomprisyazhnyy.github.io/ActiveBox/index.html" target="_blank">ActiveBox</a>
         </h2>
 
         <div class="work__description">
@@ -28,7 +28,7 @@ title: Works
         </ul>
 
         <div class="work__footer">
-            <a class="btn btn--blue btn--rounded btn--sm" href="https://artyomprisyazhnyy.github.io/MytestSites/activebox%20fix/index.html" target="_blank">Перейти на сайт</a>
+            <a class="btn btn--blue btn--rounded btn--sm" href="https://artyomprisyazhnyy.github.io/ActiveBox/index.html" target="_blank">Перейти на сайт</a>
         </div>
     </div>
 </article>
